<resources>
    <string name="app_name">Med Manager</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="login">Login</string>
    <string name="helpText">Please provide your medical username and password to
continue with Med Manager</string>
    <string name="loginCaption">Login with Google</string>
    <string name="signUpText">Don’t have an account? Sign Up</string>
    <string name="title_activity_navigation">Medications</string>
    <string name="medication">Medications</string>
    <string name="empty_medication">No Medication yet</string>
    <string name="medicationHelpText">Create a medication by clicking on the “add Medication” button below</string>
    <string name="addMedication">   Add Medication</string>
    <string name="reminder">Reminder</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_reminder">Reminder</string>
    <string name="title_activity_medication_details">Medications Details</string>
    <string name="no_reminder">No Reminder yet</string>
    <string name="reminderHelpText">Create reminder by clicking on the add icon below</string>
    <string name="alarm">Alarm</string>
    <string name="frequency">Frequency or interval for dosage</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="frequency_text">Frequency</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>

    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">394855204316905</string>
    <string name="facebook_login_protocol_scheme" translatable="false">c0a8f769aa192cd83db55d4ad0f93367</string>
    <!-- Twitter consumer key and secret -->
    <string name="twitter_consumer_key" translatable="false">jTWd2NWJ4TTiXZc5Hm2Cp6DR5</string>
    <string name="twitter_consumer_secret" translatable="false">ko0SuawMFmii7hq5HKl8Qsj7j8kkTABoXSzg3m7xR7GFvRIwoU</string>
    <string name="edit_small">edit</string>
    <string name="update">Update profile</string>
    <string name="sign_out">Sign Out</string>
    <string name="startTime">Start Time</string>
    <string name="profile">Profile</string>
    <string name="doctorimage">doctor image</string>
    <string name="frequencyIcon">Frequency Icon</string>
    <string name="start_date_icon">Start Date icon</string>
    <string name="end_date_icon">End Date Icon</string>
    <string name="reminder_main_image">Reminder Main Image</string>
    <string name="splash_logo">MedManager Logo</string>

</resources>
