<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addMedication"
        android:textStyle="normal"
        android:textSize="@dimen/textSize_normal"
        android:textColor="@color/black2"
        android:id="@+id/addMed"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/close"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto_bold"

        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Close"
        android:fontFamily="@font/roboto_light"
        android:textColor="@color/black2"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/close"
        android:layout_marginTop="10dp"
        android:gravity="center"
        app:layout_constraintLeft_toRightOf="@id/addMed"
        app:layout_constraintRight_toRightOf="parent"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/white2"
        app:layout_constraintTop_toBottomOf="@id/addMed"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="20dp"
        android:id="@+id/line"
        />
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line"
        android:background="@drawable/white_background"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="15dp"
        android:id="@+id/medName"
        android:inputType="text"
        android:maxLines="2"
        android:ellipsize="end"
        android:fontFamily="@font/roboto_medium"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/frequency_text"
        android:textColorHint="@color/black2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/medName"
        android:background="@drawable/white_background"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="15dp"
        android:id="@+id/medFrequency"
        android:inputType="number"
        android:fontFamily="@font/roboto_regular"
        android:textSize="@dimen/textSize_15"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/start_date"
        android:textColorHint="@color/black2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/medFrequency"
        android:background="@drawable/white_background"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="15dp"
        android:id="@+id/medStartDate"
        android:inputType="none"
        android:editable="false"
        android:focusable="false"
        android:fontFamily="@font/roboto_regular"
        android:textSize="@dimen/textSize_15"

        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/end_date"
        android:textColorHint="@color/black2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/medStartDate"
        android:background="@drawable/white_background"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="15dp"
        android:id="@+id/medEndDate"
        android:inputType="none"
        android:focusable="false"
        android:editable="false"
        android:fontFamily="@font/roboto_regular"
        android:textSize="@dimen/textSize_15"

        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/startTime"
        android:textColorHint="@color/black2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/medEndDate"
        android:background="@drawable/white_background"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="15dp"
        android:id="@+id/medStartTime"
        android:inputType="none"
        android:focusable="false"
        android:editable="false"
        android:fontFamily="@font/roboto_regular"
        android:textSize="@dimen/textSize_15"

        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/medical_kit"
        android:background="@drawable/green_button"
        android:text="@string/addMedication"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/medStartTime"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="15dp"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:drawablePadding="5dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/addNewMedication"
        android:fontFamily="@font/roboto_light" />



</android.support.constraint.ConstraintLayout>