<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.mylocarson.medmanager.activities.MedicationActivity"
    tools:showIn="@layout/activity_medication">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="100dp"
        android:id="@+id/emptyMedicationStateLayout">
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/emptyMedication"
                android:text="@string/empty_medication"
                android:textSize="@dimen/textSize_normal"
                android:textColor="@color/black2"
                android:textStyle="normal"
                android:fontFamily="@font/roboto_bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/medicationHelpText"
                android:textSize="@dimen/textSize_12"
                android:fontFamily="@font/roboto_light"
                app:layout_constraintTop_toBottomOf="@id/emptyMedication"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:textColor="@color/ash"
                android:textStyle="normal"
                android:gravity="center"
                android:id="@+id/medicationHelperText"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="60dp"
                android:layout_marginTop="15dp"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/medical_kit"
                android:background="@drawable/green_button"
                android:text="@string/addMedication"
                android:textColor="@color/white"
                android:fontFamily="@font/roboto_medium"
                app:layout_constraintTop_toBottomOf="@id/medicationHelperText"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="15dp"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"
                android:drawablePadding="5dp"
                android:id="@+id/addNewMedication"/>

        </android.support.constraint.ConstraintLayout>
    </LinearLayout>
    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/medRecycler"
        android:scrollbars="none"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/medical_kit"
        android:background="@drawable/green_button"
        android:text="@string/addMedication"
        android:textColor="@color/white"
        android:fontFamily="@font/roboto_medium"
        app:layout_constraintTop_toBottomOf="@id/medRecycler"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="15dp"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:drawablePadding="5dp"
        android:id="@+id/addNewMedication2"
        android:visibility="gone"/>

</android.support.constraint.ConstraintLayout>
