<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.mylocarson.medmanager.activities.ReminderActivity"
    tools:showIn="@layout/activity_reminder">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:id="@+id/emptyReminderStateLayout">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:scaleType="fitCenter"
                        android:src="@drawable/with_mask"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        android:id="@+id/dudewithmask"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/no_reminder"
                        android:textColor="@color/black2"
                        android:textSize="@dimen/textSize_normal"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        android:layout_marginTop="30dp"
                        app:layout_constraintTop_toBottomOf="@id/dudewithmask"
                        android:id="@+id/noReminderText"
                        android:fontFamily="@font/roboto_bold"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/reminderHelpText"
                        android:textSize="@dimen/textSize_small"
                        android:textColor="@color/ash"
                        android:fontFamily="@font/roboto_thin"
                        android:textStyle="normal"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/noReminderText"
                        android:layout_marginTop="15dp"
                        android:gravity="center"
                        android:id="@+id/reminderHelperText"
                        />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/medical_kit"
                        android:background="@drawable/green_button"
                        android:text="@string/addMedication"
                        android:textColor="@color/white"
                        android:fontFamily="@font/roboto_medium"
                        app:layout_constraintTop_toBottomOf="@id/reminderHelperText"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        android:layout_marginTop="25dp"
                        android:paddingRight="10dp"
                        android:paddingLeft="10dp"
                        android:drawablePadding="5dp"
                        android:id="@+id/addNewReminder"/>

                </android.support.constraint.ConstraintLayout>

            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/reminderRecycler"
                android:scrollbars="none"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:visibility="visible"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/medical_kit"
                android:background="@drawable/green_button"
                android:text="@string/addMedication"
                android:textColor="@color/white"
                android:fontFamily="@font/roboto_medium"
                app:layout_constraintTop_toBottomOf="@id/reminderRecycler"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"
                android:drawablePadding="5dp"
                android:id="@+id/addNewReminder2"
                android:visibility="visible"/>
        </android.support.constraint.ConstraintLayout>




    </android.support.v4.widget.NestedScrollView>
</android.support.constraint.ConstraintLayout>
